[gd_scene load_steps=4 format=3 uid="uid://bxhe1vfxcatpw"]

[ext_resource type="Texture2D" uid="uid://cgvtfb0ojbn4b" path="res://images/box.png" id="1_gg5r1"]
[ext_resource type="Script" path="res://scenes/objects/box.gd" id="1_v8o5c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfjd5"]
size = Vector2(127, 108)

[node name="Box" type="RigidBody2D"]
position = Vector2(941, 369)
gravity_scale = 0.0
script = ExtResource("1_v8o5c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gg5r1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.5, 4)
shape = SubResource("RectangleShape2D_qfjd5")

[node name="RemovalTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HitTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RemovalTimer" to="." method="_on_removal_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
